Should probably use legit itunes categories

--- a/podcast_assets/audio/channel.yml
+++ b/podcast_assets/audio/channel.yml
@@ -4,7 +4,7 @@
 :language: 'en-us'
 :author: 'Andromeda Yelton'
 :description: "Open paren is a podcast about libraries, librarians, and code. It's for newbies, architects, and everyone in between; it's about projects, tools, services, ethics, and people. The open paren starts a code block in many languages. Let's start something."
-:categories: ['Libraries', 'Librarians', 'Software']
+:categories: ['Technology', 'Society & Culture']
 :explicit: No
 :keywords: [libraries, librarians, software, code]
 :enclosures_url: 'http://thatandromeda.github.io/open_paren/podcast_assets/audio/'
