--- a/podcast_assets/audio/channel.yml
+++ b/podcast_assets/audio/channel.yml
@@ -8,3 +8,4 @@
 :explicit: No
 :keywords: [libraries, librarians, software, code]
 :enclosures_url: 'http://thatandromeda.github.io/open_paren/podcast_assets/audio/'
+:image_url: 'https://thatandromeda.github.io/open_paren/podcast_assets/cover_art.png'
