--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: "Open paren"
 description: "A podcast about libraries and code"
 author: "Andromeda Yelton"
 
-baseurl: "/open_paren"
+baseurl: '/open_paren'
 
 markdown: kramdown
 highlighter: rouge
